Keyguard: Allow applications to customize left-corner widget
Adds ability for trusted applications to set the application widget and
action in the lower left corner of the Keyguard.  Its behavior is
modeled against the on-screen camera widget most commonly found on the
lower right corner of the Keyguard.

Three intents are defined: one to set the widget, one to clear the
widget, and one to notify when the widget is activated.

Applications calling this intent must have this permission:
android.permission.SET_KEYGUARD_APPLICATION_WIDGET.

Change-Id: I8c5b11fd1cc1888c710bf3736e3c28d77fc57e37

Conflicts:

	core/java/com/android/internal/policy/IKeyguardService.aidl
	core/res/AndroidManifest.xml
	core/res/res/values/cm_strings.xml
	packages/Keyguard/res/values-sw600dp/bools.xml
	packages/Keyguard/src/com/android/keyguard/KeyguardViewMediator.java
	packages/SystemUI/res/layout-sw600dp/navigation_bar.xml
	packages/SystemUI/res/layout/navigation_bar.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/KeyguardTouchDelegate.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/NavigationBarTransitions.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/NavigationBarView.java
	policy/src/com/android/internal/policy/impl/keyguard/KeyguardServiceWrapper.java

--- a/packages/SystemUI/res/layout/navigation_bar.xml
+++ b/packages/SystemUI/res/layout/navigation_bar.xml
@@ -61,6 +61,15 @@
                 android:layout_height="match_parent">
 
             <com.android.systemui.statusbar.policy.KeyButtonView
+                android:id="@+id/application_widget_button"
+                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_gravity="center_vertical|left"
+                android:scaleType="center"
+                android:visibility="gone"
+                />
+
+            <com.android.systemui.statusbar.policy.KeyButtonView
                 android:layout_width="80dp"
                 android:id="@+id/show_notifs"
                 android:layout_height="match_parent"
@@ -135,6 +144,16 @@
                 >
 
         </LinearLayout>
+
+        <com.android.systemui.statusbar.policy.KeyButtonView
+            android:id="@+id/application_widget_button"
+            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_gravity="center_vertical|left"
+            android:scaleType="center"
+            android:visibility="gone"
+            android:rotation="270"
+            />
 
         <com.android.systemui.statusbar.policy.KeyButtonView
                 android:layout_width="80dp"
