--- a/core/res/res/values/cm_strings.xml
+++ b/core/res/res/values/cm_strings.xml
@@ -237,9 +237,9 @@
     <string name="permdesc_useHardwareFramework">Allows an app access to the CM hardware framework.</string>
 
     <!-- Title of an application permission, listed so the user can choose whether they want the application to do this. -->
-    <string name="permlab_keyguardApplicationWidget">set keyguard app widget</string>
+    <string name="permlab_keyguardApplicationWidget">set keyguard application widget</string>
     <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
-    <string name="permdesc_keyguardApplicationWidget">Allows an app to set the app widget on the keyguard.</string>
+    <string name="permdesc_keyguardApplicationWidget">Allows an app to set the application widget on the keyguard.</string>
 
     <!-- Title of an application permission, listed so the user can choose whether they want the application to do this. -->
     <string name="permlab_interceptPackageLaunch">intercept application launch</string>
