--- a/packages/SystemUI/res/values/vanir_strings.xml
+++ b/packages/SystemUI/res/values/vanir_strings.xml
@@ -62,6 +62,12 @@
     <string name="onthego_front_camera">Use front camera</string>
     <string name="onthego_service_toggle">Automatically restart service</string>
 
+    <!-- notify changed wifi network -->
+    <string name="wifi_status_changed">New connection </string>
+    <string name="wifi_restored">Connection restored </string>
+    <string name="wifi_address_changed">WiFi SSID changed to </string>
+    <string name="wifi_changed_ticker">WiFi SSID: </string>
+
     <!-- Navbar QS -->
     <string name="quick_settings_navbar_on">Navbar on</string>
     <string name="quick_settings_navbar_off">Navbar off</string>
